# face_rec_rk3588

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start.sh
app/: main.py
app/cfg/: config.py  default.yaml  development.yaml  logging.py  production.yaml  testing.yaml
app/core/: image_utils.py  model_manager.py  pipeline.py  process_utils.py
app/router/: face_router.py
app/schema/: face_schema.py
app/service/: face_dao.py  face_operation_service.py  stream_manager_service.py
data/lancedb/faces_v2.lance/_transactions/: 0-6d9ddfc5-43e0-483a-902d-36b161239812.txn  1-c6c35444-b820-468a-897e-dcb70af188a5.txn  10-c28fe9d4-c004-4c22-92e6-56a598e98208.txn  11-01e38ecf-9171-4832-8afa-6bac7af0cfd5.txn  12-b259ebcd-4e35-492d-8787-a9d4261447bc.txn  13-5f4aa002-9688-4027-aeaf-cb7e0c0ab6f6.txn  14-72db0bbe-2b1c-4909-84f8-e931d83bc804.txn  15-a925cbc5-fbf8-4b6f-806f-9caa53ff5f16.txn  16-52fa6986-8c0b-4329-b77f-bc9fdf0ce2a3.txn  2-bbac788a-f5e7-4ab2-8944-ba8260d7a830.txn  (+7 more)
data/zoo/mbf_w600k--112x112_float_rknn_rk3588_1/: mbf_w600k--112x112_float_rknn_rk3588_1.json
data/zoo/scrfd_10g--640x640_quant_hailort_hailo8_1/: scrfd_10g--640x640_quant_hailort_hailo8_1.json
data/zoo/yolov8n_relu6_face--640x640_quant_rknn_rk3588_1/: yolov8n_relu6_face--640x640_quant_rknn_rk3588_1.json  yolov8n_relu6_face--640x640_quant_rknn_rk3588_1.rknn
data/zoo/yolov8s_relu6_widerface_kpts--640x640_quant_rknn_rk3588_1/: yolov8s_relu6_widerface_kpts--640x640_quant_rknn_rk3588_1.json
ui/: test_rtsp.py  ui.py
(+132 files in other folders)
